@@ -1,5 +1,12 @@
 2012-01-10  Rene Liebscher <R.Liebscher@gmx.de>
 
+	bug #35261 avrftdi uses wrong interface in avrftdi_paged_(write|load)
+	* avrftdi.c: Fixed interface and implementation of avrftdi_paged_(write|load)
+	patch #7672 adding support for O-Link (FTDI based JTAG) as programmer
+	* avrdude.conf.in: added o-link entry
+
+2012-01-10  Rene Liebscher <R.Liebscher@gmx.de>
+
 	patch #7699 Read additional config files
 	* main.c: Added reading of additional config files
 	* avrdude.1: updated man page
